fix: Fixes divider alignment

--- a/src/App.css
+++ b/src/App.css
@@ -2395,7 +2395,7 @@ code,
 }
 
 .child-divider {
-  margin-left: -125px;
+  margin-left: -12px;
 }
 
 .child-divider .drop-hover {
